--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -64,22 +64,34 @@
       background-color: var(--nav-hover-background-color);
   }
   
-.hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-  }
-  
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 .hero img {
-      max-width: 1700px;
-  }
-  
+    max-width: 1700px;
+}
+
 .hero article {
-      max-width: 800px;
-      margin: 0 auto;
-  }
-  
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.hero h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: auto;
+    font-size: 7em;
+    color: #fff;
+    text-shadow: 2px 2px 4px #000447;
+    z-index: 1;
+}
+
+
 .history {
       padding: 1rem;
       font-family: var(--paragraph-font);
@@ -411,30 +423,8 @@ button {
   text-decoration: none;
 }
 
-/**Home page/
-/* Hero section */
-/*.hero {
-  position: relative;
-  text-align: center;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.hero img {
-  width: 100%;
-  height: auto;
-}
-
-.hero h2 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3em;
-  text-shadow: 2px 2px 4px #000;
-}*/
-
 /* Home Page Specific Styles */
+
 .home .hero {
   position: relative;
   text-align: center;
