--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -170,6 +170,7 @@ footer p {
 }
 
 .hero h1 {
+  font-family: var(--heading-font);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -306,14 +307,14 @@ button {
 
 .employee h3 {
   margin: 10px 0 5px;
-  color: var(--primary-color); /* Use primary color for names */
+  color: var(--primary-color); 
   font-family: var(--paragraph-font);
   /*font-family: var(--heading-font);*/
 }
 
 .employee p {
   margin: 0;
-  color: var(--accent2-color); /* Use accent2 color for titles */
+  color: var(--accent2-color); 
   font-family: var(--paragraph-font);
 }
 
@@ -454,10 +455,16 @@ button {
 .newsletter {
   text-align: center;
   padding: 20px;
-  background-color: var(--secondary-color);
+  background-color: var(--nav-hover-background-color);
   margin: 20px auto;
   border-radius: 8px;
   max-width: 600px;
+}
+
+.newsletter h3 {
+  font-family: var(--paragraph-font);
+  color: #000447;
+  font-size: 2em;
 }
 
 .newsletter form {
@@ -478,6 +485,7 @@ button {
   color: white;
   border: none;
   cursor: pointer;
+  font-family: var(--paragraph-font);
 }
 
 /* Call to action */
@@ -489,16 +497,20 @@ button {
   margin: 20px auto;
   border-radius: 8px;
   max-width: 600px;
+  font-family: var(--paragraph-font);
+  font-size: 1.5em;
 }
 
 .cta a {
-  color: white;
+  color: var(--accent2-color);
   text-decoration: none;
   background-color: var(--accent1-color);
   padding: 10px 20px;
   border-radius: 4px;
   display: inline-block;
   margin-top: 10px;
+  font-family: var(--paragraph-font);
+  font-size: 1em;
 }
 
 /* Content grid */
@@ -519,11 +531,23 @@ button {
 .grid-item img {
   width: 100%;
   height: auto;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+}
+
+.grid-item h2 {
+  padding: 20px;
+  color: var(--nav-link-color);
+  text-shadow: 1px 1px 2px var(--nav-hover-background-color);
+  font-family: var(--heading-font);
+  font-size: 1.5em;
 }
 
 .grid-item p {
   padding: 20px;
-  color: var(--nav-background-color);
+  color: var(--accent2-color);
+  font-family: var(--paragraph-font);
+  font-size: 1.2em;
 }
 
 /* Footer wireframe link */
